fixed css overlap

--- a/app/static/main.css
+++ b/app/static/main.css
@@ -97,7 +97,7 @@ html {
   position: fixed;
   font-size: 20px;
   bottom: 0;
-  width: 100%;
+  width: 70%;
 }
 
 .navbar a {
